[package]
name = "h2kv"
version = "0.1.0"
description = "HTTP/2 interface for key-value storage systems"
repository = "https://github.com/guapodero/h2kv"
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.88"

[dependencies]
log.workspace = true
env_logger.workspace = true
anyhow = "1"
bytes = "1"
http = "1"
h2 = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net", "signal"] }
tokio-rustls = "0.26"
webpki-roots = "1"
auto-args = "0.3"
serde_json = "1"

walkdir = "2.5"
pathdiff = "0.2"
mime2ext = "0.1"
mediatype = "0.20"
headers-accept = "0.2"

[dependencies.leveldb-rs-binding]
git = "https://github.com/kaimast/leveldb-rs-binding.git"
rev = "001fccb"
