[package]
name = "h2kv"
version = "0.1.2"
authors = ["Daniel James Baumann <dan.james.baumann@gmail.com>"]
description = "HTTP/2 interface for key-value storage systems"
readme = "../README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/guapodero/h2kv"
keywords = ["http", "leveldb"]
categories = ["web-programming"]
edition = "2024"
rust-version = "1.88"

[dependencies]
log.workspace = true
env_logger.workspace = true
leveldb-rs-binding = "1.0"
anyhow = "1"
bytes = "1"
http = "1"
h2 = "0.4"
tokio = { version = "1", features = [
  "rt-multi-thread",
  "macros",
  "sync",
  "net",
  "signal"
] }
auto-args = "0.3"
serde_json = "1"
daemonize = "0.5"
walkdir = "2.5"
pathdiff = "0.2"
mime2ext = "0.1"
mediatype = "0.20"
headers-accept = "0.2"
