[package]
name = "xtask"
version = "0.0.0"
edition.workspace = true
publish = false

[dependencies]
log.workspace = true
env_logger.workspace = true
devx-cmd = "0.5"
cargo_metadata = "0.22"
parse-changelog = { version = "0.6", default-features = false }
semver = "1"
toml_edit = "0.23"
crates-index = "3.11"
ureq = "3"
